--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -2,3 +2,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scroll::-webkit-scrollbar-track
+{
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+	border-radius: 10px;
+	background-color: #F5F5F5;
+	
+}
+
+.scroll::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.scroll::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #02022E;
+	opacity: 0.5;
+}
+
+.job {
+    @apply text-sm md:text-base;
+}
+
+input[type="radio"]:change + label {
+	@apply bg-navy text-white
+  }
